--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,28 @@
-version: '3.8'
-
 services:
   backend:
-    build: ./backend
-    command: sh -c "python manage.py migrate && gunicorn --bind 0.0.0.0:8000 ridiv.wsgi:application"
-    volumes:
-      - ./backend:/app
-    env_file:
-      - .env
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: backend
     ports:
       - "8000:8000"
     restart: unless-stopped
+    networks:
+      - app-network
   
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: frontend
     ports:
       - "80:80"
+    environment:
+      - BACKEND_ADDR=http://backend:8000
     depends_on:
       - backend
     restart: unless-stopped
-  
-  # Uncomment if you need a database
-  # db:
-  #   image: postgres:13
-  #   volumes:
-  #     - postgres_data:/var/lib/postgresql/data/
-  #   environment:
-  #     POSTGRES_DB: yourdb
-  #     POSTGRES_USER: youruser
-  #     POSTGRES_PASSWORD: yourpassword
-
-# volumes:
-#   postgres_data:
+    networks:
+      - app-network
+networks:
+  app-network:
